Added password change

--- a/src/App.scss
+++ b/src/App.scss
@@ -527,6 +527,12 @@
            border: 1px solid gray;
            border-radius: 16px;
          }
+
+         .badge {
+
+          color: black;
+           
+         }
        }
      }
    }
