--- a/src/Form.css
+++ b/src/Form.css
@@ -1,7 +1,18 @@
+img {
+    width: 60px;
+  }
+
+.img-div{
+    text-align: center;
+    margin-bottom: 10px;
+}
 .login-form {
+    
     width: 340px;
-    margin: 50px auto;
+    margin: 200px auto;
   	font-size: 15px;
+    /* display: inline-block; */
+    
 }
 .login-form form {
     margin-bottom: 15px;
